--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.3",
     "webpack": "4.31.0",
+    "webpack-bundle-analyzer": "3.3.2",
     "webpack-cli": "3.3.2",
     "webpack-merge": "4.2.1",
     "worker-loader": "2.0.0"
